# xcel

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/history/0.1/: 0.1.0.rst
src/xcel/: __init__.py
