[project]
name = "xcel"
version = "0.1.0"
description = "Data manipulation using spreadsheets"
readme = "README.md"
authors = [
    { name = "Medardo Antonio Rodriguez" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
xcel = "xcel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "isort>=6.0.1",
    "ruff>=0.11.6",
]
test = [
    "hypothesis>=6.131.8",
    "pytest>=8.3.5",
]
