[project]
name = "xcel"
version = "0.1.0"
description = "Data manipulation using spreadsheets"
readme = "README.md"
authors = [
    { name = "Medardo Antonio Rodriguez" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
xcel = "xcel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
]
lint = [
    "isort>=6.0.1",
    "ruff>=0.11.6",
]
test = [
    "hypothesis>=6.131.8",
    "pytest>=8.3.5",
]
tooling = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "notebook>=7.4.1",
]
dev = [
    { include-group="test" },
    { include-group="lint" },
    { include-group="docs" },
    { include-group="tooling" },
]

[tool.uv]
default-groups = ["dev"]

[tool.pydocstyle]
add-ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["xotl/tools"]
skip_gitignore = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
  "E501", # line-length is left to the formatter
  "E731", # do not assign a `lambda` expression, use a `def` (we use it a lot)
]
preview = true
# exclude = ["src/<project-dir>/_version.py"]

[tool.ruff.format]
quote-style = "preserve"
preview = true
exclude = ["src/<project-dir>/_version.py"]
